Refactor node IP configuration